# NibeTester

./: .gitignore  360P_PROTOCOL.md  ADDRESSING.md  BITMASK_EXAMPLE.md  DIRECT_SERIAL_PLAN.md  PROTOCOL.md  PROTOCOL_FINDINGS.md  PYTHON_IMPLEMENTATION.md  QUICKSTART.md  README.md  WRITE_PROTOCOL_ANALYSIS.md  analyze_messages.py  check_activity.py  config.example.py  decode_19200.py  diagnostic.py  examples.py  final_test.py  find_messages.py  find_settings.py  main.py  nibe360p_active.py  nibe360p_corrected.py  nibe_protocol.py  nibe_registers.py  nibe_serial.py  passive_listen.py  pumps.yaml  pyproject.toml  quick_baud_test.py  raw_dump.py  registers_360p.py  scan_baudrate.py  show_9600_bytes.py  show_messages.py  test_9600_all_parity.py  test_high_baud.py  test_master_slave.py  test_nibe.py  test_parity_57600.py  (+3 more)
